@@ -1,38 +1,38 @@
 $Id: README,v 1.1 2013-07-10 04:17:04 mschimek Exp $
 
-This is the README file in the Zapping CVS repository web module,
+This is the README file in the Zapping SVN repository web module,
 which contains the master version of all files in the Zapping project
 web space. All changes to the Zapping website must be made in the
-repository and then uploaded to web.sourceforge.net. The Doxygen
+repository and then uploaded to sourceforge.net. The Doxygen
 documentation for libzvbi and librte is not in this repository,
 details below.
 
-Instructions for the website maintainer as of 2013-07-01
+Instructions for the website maintainer as of 2017-11-29
 --------------------------------------------------------
 
-For write access to the CVS repository and access to the SF shell and
+For write access to the SVN repository and access to the SF shell and
 web space you must create a SSH key pair and attach the public key to
 your SF account. See the SF documentation for details. To check out
 the repository for the first time on your own computer type
 
-   cvs -d:ext:username@zapping.cvs.sourceforge.net:/cvsroot/zapping checkout web
+   svn checkout --username=USERNAME svn+ssh://USERNAME@svn.code.sf.net/p/zapping/svn/trunk/web web
 
-Replace username with your SF account username. For details on
+Replace USERNAME with your SF account username. For details on
 updating your copy of the repository and committing changes see the
-CVS documentation. To log into your SF shell account type
+SVN documentation. To log into your SF shell account type
 
-   ssh -t username,zapping@shell.sourceforge.net create
+   ssh -t USERNAME@shell.sourceforge.net create
 
 This will create a virtual machine, a new shell, and give you access
-to your personal directory /home/users/u/us/username. The Zapping web
+to your personal directory /home/users/U/US/USERNAME. The Zapping web
 space is accessible under /home/project-web/zapping. To check out the
-web CVS for the first time on web.sourceforge.net type
+web SVN for the first time type
 
   cd /home/project-web/zapping
-  cvs -d:pserver:anonymous@zapping.cvs.sourceforge.net:/cvsroot/zapping co web
+  svn checkout https://svn.code.sf.net/p/zapping/svn/trunk/web .
   ./prepare_web.sh
 
-The cvs command checks out a read-only copy of the web CVS module and
+The svn command checks out a read-only copy of the web SVN module and
 ./prepare_web.sh adjusts the access permissions for the Sourceforge
 web server. To update this copy of the repository you can just run
 
@@ -51,10 +51,10 @@ or
 
   ./prepare_dox.sh rte librte
 
-The first argument specifies the CVS module, the second one the
+The first argument specifies the SVN module, the second one the
 subdirectory where the HTML files are to be placed. The script checks
-out the CVS module, runs Doxygen, copies the HTML files with suitable
-access permissions, then deletes the CVS files. You do not need to run
+out the SVN module, runs Doxygen, copies the HTML files with suitable
+access permissions, then deletes the SVN files. You do not need to run
 ./prepare_web.sh first or afterwards.
 
 You should test and review any changes to scripts and webpages on your
